cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09247_137603984.yaml
Resources:
  RedPandaTestRoleC767CA0E:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: redshift.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestRole/Resource
  RedPandaTestRoleDefaultPolicyEDC6E947:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:GetObject*
              - s3:GetBucket*
              - s3:List*
              - s3:DeleteObject*
              - s3:PutObject*
              - s3:Abort*
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - RedPandaTestBaseBucket46FCFB76
                  - Arn
              - Fn::Join:
                  - ""
                  - - Fn::GetAtt:
                        - RedPandaTestBaseBucket46FCFB76
                        - Arn
                    - /*
        Version: "2012-10-17"
      PolicyName: RedPandaTestRoleDefaultPolicyEDC6E947
      Roles:
        - Ref: RedPandaTestRoleC767CA0E
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestRole/DefaultPolicy/Resource
  RedPandaTestBaseBucket46FCFB76:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: undefined-undefined-cc3036e1-4e7a-43d7-8c4a-e5f5b5986343
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestBaseBucket/Resource
  RedPandaTestVPC56DBA583:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/Resource
  RedPandaTestVPCPublicSubnet1SubnetBC637978:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1/Subnet
  RedPandaTestVPCPublicSubnet1RouteTableC8109A9D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1/RouteTable
  RedPandaTestVPCPublicSubnet1RouteTableAssociationF672026F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPublicSubnet1RouteTableC8109A9D
      SubnetId:
        Ref: RedPandaTestVPCPublicSubnet1SubnetBC637978
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1/RouteTableAssociation
  RedPandaTestVPCPublicSubnet1DefaultRoute249081CA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPublicSubnet1RouteTableC8109A9D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: RedPandaTestVPCIGW287BD0C8
    DependsOn:
      - RedPandaTestVPCVPCGW0EA0FD7B
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1/DefaultRoute
  RedPandaTestVPCPublicSubnet1EIPD46AA6ED:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1/EIP
  RedPandaTestVPCPublicSubnet1NATGateway9708CBAF:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - RedPandaTestVPCPublicSubnet1EIPD46AA6ED
          - AllocationId
      SubnetId:
        Ref: RedPandaTestVPCPublicSubnet1SubnetBC637978
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet1/NATGateway
  RedPandaTestVPCPublicSubnet2Subnet9B15D849:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2/Subnet
  RedPandaTestVPCPublicSubnet2RouteTable83B4DD80:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2/RouteTable
  RedPandaTestVPCPublicSubnet2RouteTableAssociation17CE6B5F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPublicSubnet2RouteTable83B4DD80
      SubnetId:
        Ref: RedPandaTestVPCPublicSubnet2Subnet9B15D849
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2/RouteTableAssociation
  RedPandaTestVPCPublicSubnet2DefaultRouteB36ED715:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPublicSubnet2RouteTable83B4DD80
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: RedPandaTestVPCIGW287BD0C8
    DependsOn:
      - RedPandaTestVPCVPCGW0EA0FD7B
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2/DefaultRoute
  RedPandaTestVPCPublicSubnet2EIP9C0CC17F:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2/EIP
  RedPandaTestVPCPublicSubnet2NATGateway656395BE:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - RedPandaTestVPCPublicSubnet2EIP9C0CC17F
          - AllocationId
      SubnetId:
        Ref: RedPandaTestVPCPublicSubnet2Subnet9B15D849
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PublicSubnet2/NATGateway
  RedPandaTestVPCPrivateSubnet1Subnet2241E9D0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet1
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet1/Subnet
  RedPandaTestVPCPrivateSubnet1RouteTable1423F8CB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet1
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet1/RouteTable
  RedPandaTestVPCPrivateSubnet1RouteTableAssociation1875484A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPrivateSubnet1RouteTable1423F8CB
      SubnetId:
        Ref: RedPandaTestVPCPrivateSubnet1Subnet2241E9D0
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet1/RouteTableAssociation
  RedPandaTestVPCPrivateSubnet1DefaultRouteEC16316C:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPrivateSubnet1RouteTable1423F8CB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: RedPandaTestVPCPublicSubnet1NATGateway9708CBAF
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet1/DefaultRoute
  RedPandaTestVPCPrivateSubnet2Subnet5C3FB9BB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet2
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet2/Subnet
  RedPandaTestVPCPrivateSubnet2RouteTable61375AEE:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet2
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet2/RouteTable
  RedPandaTestVPCPrivateSubnet2RouteTableAssociation12792684:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPrivateSubnet2RouteTable61375AEE
      SubnetId:
        Ref: RedPandaTestVPCPrivateSubnet2Subnet5C3FB9BB
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet2/RouteTableAssociation
  RedPandaTestVPCPrivateSubnet2DefaultRouteC41CEE85:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RedPandaTestVPCPrivateSubnet2RouteTable61375AEE
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: RedPandaTestVPCPublicSubnet2NATGateway656395BE
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/PrivateSubnet2/DefaultRoute
  RedPandaTestVPCIGW287BD0C8:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: RedPandaTestStack/RedPandaTestVPC
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/IGW
  RedPandaTestVPCVPCGW0EA0FD7B:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: RedPandaTestVPC56DBA583
      InternetGatewayId:
        Ref: RedPandaTestVPCIGW287BD0C8
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestVPC/VPCGW
  RedPandaTestSecurityGroupC00ACD18:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RedPandaTestStack/RedPandaTestSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:5439
          FromPort: 5439
          IpProtocol: tcp
          ToPort: 5439
      VpcId:
        Ref: RedPandaTestVPC56DBA583
    DependsOn:
      - RedPandaTestVPCIGW287BD0C8
      - RedPandaTestVPCPrivateSubnet1DefaultRouteEC16316C
      - RedPandaTestVPCPrivateSubnet1RouteTable1423F8CB
      - RedPandaTestVPCPrivateSubnet1RouteTableAssociation1875484A
      - RedPandaTestVPCPrivateSubnet1Subnet2241E9D0
      - RedPandaTestVPCPrivateSubnet2DefaultRouteC41CEE85
      - RedPandaTestVPCPrivateSubnet2RouteTable61375AEE
      - RedPandaTestVPCPrivateSubnet2RouteTableAssociation12792684
      - RedPandaTestVPCPrivateSubnet2Subnet5C3FB9BB
      - RedPandaTestVPCPublicSubnet1DefaultRoute249081CA
      - RedPandaTestVPCPublicSubnet1EIPD46AA6ED
      - RedPandaTestVPCPublicSubnet1NATGateway9708CBAF
      - RedPandaTestVPCPublicSubnet1RouteTableC8109A9D
      - RedPandaTestVPCPublicSubnet1RouteTableAssociationF672026F
      - RedPandaTestVPCPublicSubnet1SubnetBC637978
      - RedPandaTestVPCPublicSubnet2DefaultRouteB36ED715
      - RedPandaTestVPCPublicSubnet2EIP9C0CC17F
      - RedPandaTestVPCPublicSubnet2NATGateway656395BE
      - RedPandaTestVPCPublicSubnet2RouteTable83B4DD80
      - RedPandaTestVPCPublicSubnet2RouteTableAssociation17CE6B5F
      - RedPandaTestVPCPublicSubnet2Subnet9B15D849
      - RedPandaTestVPC56DBA583
      - RedPandaTestVPCVPCGW0EA0FD7B
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestSecurityGroup/Resource
  RedPandaTestSubnets:
    Type: AWS::Redshift::ClusterSubnetGroup
    Properties:
      Description: Subnets for Redshift cluster
      SubnetIds:
        - Ref: RedPandaTestVPCPublicSubnet1SubnetBC637978
        - Ref: RedPandaTestVPCPublicSubnet2Subnet9B15D849
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestSubnets
  RedPandaTestRedshift:
    Type: AWS::Redshift::Cluster
    Properties:
      ClusterType: single-node
      DBName: ""
      MasterUsername: ""
      MasterUserPassword: ""
      NodeType: dc2.large
      ClusterSubnetGroupName:
        Ref: RedPandaTestSubnets
      IamRoles:
        - Fn::GetAtt:
            - RedPandaTestRoleC767CA0E
            - Arn
      Port: 5439
      PubliclyAccessible: true
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - RedPandaTestSecurityGroupC00ACD18
            - GroupId
    DependsOn:
      - RedPandaTestSecurityGroupC00ACD18
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestRedshift
  RedPandaTestGlueDB85E39E35:
    Type: AWS::Glue::Database
    Properties:
      CatalogId:
        Ref: AWS::AccountId
      DatabaseInput:
        Name: ""
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestGlueDB/Resource
  RedPandaTestGlueBucket22E00823:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: undefined-undefined-a40a09d7-2dcc-4f64-bd42-3dffafe36712
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestGlueBucket/Resource
  RedPandaTestGlueTable62E105B8:
    Type: AWS::Glue::Table
    Properties:
      CatalogId:
        Ref: AWS::AccountId
      DatabaseName:
        Ref: RedPandaTestGlueDB85E39E35
      TableInput:
        Description: " generated by CDK"
        Name: ""
        Parameters:
          classification: csv
          has_encrypted_data: false
        StorageDescriptor:
          Columns:
            - Name: col0
              Type: string
            - Name: col1
              Type: string
          Compressed: false
          InputFormat: org.apache.hadoop.mapred.TextInputFormat
          Location:
            Fn::Join:
              - ""
              - - s3://
                - Ref: RedPandaTestGlueBucket22E00823
                - /
          OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
          SerdeInfo:
            SerializationLibrary: org.apache.hadoop.hive.serde2.OpenCSVSerde
          StoredAsSubDirectories: false
        TableType: EXTERNAL_TABLE
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestGlueTable/Table
  RedPandaTestAthenaBucket7C75ED4A:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: undefined-undefined-d3bfed3d-b0c4-4d5d-b99c-bb003ea284d3
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: RedPandaTestStack/RedPandaTestAthenaBucket/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.90.1,@aws-cdk/aws-applicationautoscaling=1.90.1,@aws-cdk/aws-autoscaling-common=1.90.1,@aws-cdk/aws-cloudwatch=1.90.1,@aws-cdk/aws-codeguruprofiler=1.90.1,@aws-cdk/aws-ec2=1.90.1,@aws-cdk/aws-ecr=1.90.1,@aws-cdk/aws-ecr-assets=1.90.1,@aws-cdk/aws-events=1.90.1,@aws-cdk/aws-glue=1.90.1,@aws-cdk/aws-iam=1.90.1,@aws-cdk/aws-kms=1.90.1,@aws-cdk/aws-lambda=1.90.1,@aws-cdk/aws-logs=1.90.1,@aws-cdk/aws-redshift=1.90.1,@aws-cdk/aws-s3=1.90.1,@aws-cdk/aws- [...]
    Metadata:
      aws:cdk:path: RedPandaTestStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
